# GofL

./: .gitignore  LICENSE  README.md  game.py  life.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: publish.yml
Game_of_Life.egg-info/: PKG-INFO  SOURCES.txt
game_of_life_gofl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
gameoflife/: life.py
