[metadata]
name = Game of Life
version = 0.0.1
author = Pasha Takmakov
author_email = pavel.takmakov@gmail.com
description = Command line implementation for game of life
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/takmakov/GofL
classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: MIT License
     Operating System :: OS Independent[options]
packages = find:
python_requires = >=3.7
include_package_data = True